--- a/StudySync/netlify.toml
+++ b/StudySync/netlify.toml
@@ -1,10 +1,8 @@
 [build]
-  command = "npm run build"
-  publish = "dist"
-
+  command = "npm install && npx vite build"
+  publish = "dist/public"
 [build.environment]
-  NODE_VERSION = "18"
-
+  NODE_VERSION = "20"
 [[redirects]]
   from = "/*"
   to = "/index.html"
